Report has added

--- a/tourismex/templates/inx.html
+++ b/tourismex/templates/inx.html
@@ -8,7 +8,46 @@
 <div class="container">
     <div class="row">
         <div>
-            <h2 class="text-red-400">Главная страница проекта</h2>
+            <h2 class="text-3xl text-color_turquoise font-bold">Главная страница проекта</h2>
+            <div>
+                <p class="base_text text-color_turquoise indent-8 my-2">Приветствуем вас на нашем сайте Tourismex! Здесь вы сможете
+                    узнать любую информацию, касающуюся туризма
+                    в Иркутской области. Все, что вы только можете захотеть узнать, находится здесь.</p>
+
+            </div>
+            <div>
+                <p class="base_text text-color_turquoise indent-8 my-2">Сейчас вы находитесь на главной станице. Здесь вы сможете
+                    увидеть интекрактивную карту от Яндекс.Карт. В ней вы сможете построить необходимые вам маршруты.</p>
+
+            </div>
+            <div class="h-[50vh]">
+                <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Aee2d2855b0676edd5874f0441dc810d330f1ca7500965330d0e243fac75dce5e&amp;width=100%&amp;height=100%%&amp;lang=ru_RU&amp;scroll=true"></script>
+            </div>
+            <div>
+                <p class="base_text text-color_turquoise indent-8 my-2">На других страницах сайта вы сможете увидеть и дргую карту -
+                 с кратким описанием каждого из четрых районов области. </p>
+                <p class="base_text text-color_turquoise indent-8 my-2">
+                    На странице с описанием климата области вы сможете ознакомиться с подробным описанием клиамата каждого
+                    района области, узнать, какие растения встречаются в нем, а также какие ограничения накладывает климат
+                    на туризм.
+                </p>
+                <p class="base_text text-color_turquoise indent-8 my-2">
+                    На странице с описанием транспорта вас ждет карта основных транспортных артерий области и подробное
+                    описание транспортных возможностей каждого из районов.
+                </p>
+                <p class="base_text text-color_turquoise indent-8 my-2">
+                    На сайте также доступна некоторая сувенирная продукция от партнеров, характерная для области. Не
+                    забдуьте привезти семье и друзьям что-то от Байкала!
+                </p>
+                <p class="base_text text-color_turquoise indent-8 my-2">
+                    Справа вы могли уже заметить чат. Чтобы воспользоваться им, войдите с помощью одной из социальных сетей.
+                    Ваши данные находятся в безопасности, вы увидите, что этот сайт запросит из вашего профиля.
+                </p>
+
+            </div>
+            <div>
+
+            </div>
         </div>
     </div>
 </div>
