--- a/tourismex/templates/transport.html
+++ b/tourismex/templates/transport.html
@@ -6,57 +6,57 @@
 
 {% block body %}
 
-<h1>Транспорт области: куда и как добраться</h1>
+<h1 class="text-2xl font-bold text-color_turquoise">Транспорт области: куда и как добраться</h1>
 
-<div class="block">
-  <p class="base_text">
+<div class="mx-2 text-color_turquoise">
+  <p class="my-1 indent-8">
     В иркутской области широко представлен весь существующий транспорт:
     наземный (железнодорожный и автомобильный), водный и воздушный. Разные регионы
     области имеют разный же свой основной способ добраться из и в них.
   </p>
-  <div class="imgholder">
-    <img class="block_image" src="{{ url_for('static', filename='pic/road_map.png') }}" alt="Ошибка при загрузке фото">
+  <div class="mx-2 text-color_turquoise">
+    <img class="block_image" src="{{ url_for('static', filename='pic/transport_map.png') }}" alt="Ошибка при загрузке фото">
   </div>
 </div>
 
-<h2>Общая транспортная обстановка</h2>
+<h2 class="text-xl font-bold text-color_turquoise mt-2">Общая транспортная обстановка</h2>
 
-<div class="block">
-  <p class="base_text">
+<div class="mx-2 text-color_turquoise">
+  <p class="my-2 indent-8">
     Иркутская область - самый большой регион России, не имеющий доступа к
     морю. Поэтому тут не присутствует морской транспорт в привычном виде,
     так как на Байкале судоходство огранчиено экологическими нормами.
   </p>
-  <p class="base_text">
+  <p class="my-2 indent-8">
     Несмотря на то, что соседние Якутия и Красноярский край имеют кратно большие размеры,
     иркутская область протянулась по долготе на 1450 км, с запада на восток — на 1318 км.
     Это больше любого государства Европы, что оначает, что транспорт  критически важен для области.
   </p>
-  <p class="base_text">
+  <p class="my-1 indent-8">
     И транспорт действительно связывает всю эту огромную территорию воедино. На юге
     основной транспорт - наземный. Там присутствует густая автомобильная сеть и линия
     старейшей железной дороги России - Транссиб, на который нанизаны почти все города юга.
   </p>
 </div>
 
-<h2>Железнодорожный транспорт</h2>
+<h2 class="text-xl font-bold text-color_turquoise">Железнодорожный транспорт</h2>
 
-<div class="block">
-  <p class="base_text">
+<div class="mx-2 text-color_turquoise">
+  <p class="my-2 indent-8">
     По территории области Проходит две железные дороги: транссиб, построеный еще во времена
     Российской Империи, и только недавно окончательно введенная в полную эксплуатацию БАМ,
     Байкало-амурская магистраль. Первый обслуживает юг области, и транссиб вследствие количества
     населения является самой нагруженной ж/д веткой области. БАМ же проходит по северу области, и он
     позволяет людям оттула добираться до "большой земли", особенно важен он для Усть-Илимска и Бодайбо.
   </p>
-  <div class="imgholder">
+  <div class="mx-2 text-color_turquoise">
     <img class="block_image" src="{{ url_for('static', filename='pic/transsib.jpg') }}" alt="Ошибка при загрузке фото">
   </div>
-  <p class="base_text">
+  <p class="my-2 indent-8">
     Транссиб проходит через следующие города: Тайшет, Тулун, Нижнеудинск, Зима, Черемхово,
     Усолье-сибирское, Ангарск, Иркутск, Шелехов, Слюдянка, Байкальск.
   </p>
-  <p class="base_text">
+  <p class="my-2 indent-8">
     Ну а БАМ, великая северная дорога, начинается от Тайшета. Далее она идет на север,
     к Братску, через поселки строителей вокруг, через одну из мощнейших ГЭС в России,
     Братскую, затем поворачивает на восток и проходит через Железногоск-Илимский, после
@@ -75,7 +75,7 @@
      Бурятии. Тоннель под этим мостом, как говорилось, был сдан в 2003, а начат аж в 1977 году.
      Природу побеждали целых 26 лет.
   </p>
-  <p class="base_text">
+  <p class="my-2 indent-8">
     Теперь вновь перенесемся на юг. От Байкальска ответвляется Кругобайкальская железная дорога, или КБЖД.
     Она не проходит через города, несет только туристическую функцию. Идет от Слюдянки до Байкала
     (противоположный берег Ангары у самого ее истока, напротив Листвянки), это 89 километров.
@@ -83,7 +83,7 @@
     эта дорога не имеет равных в России и выходит на первые места в мире. С нее открываются шикарные
     виды на Байкал и Приморский хребет, дорога постоянно петляет, скорость движения поэтому весьма невысокая.
   </p>
-  <p class="base_text">
+  <p class="my-2 indent-8">
     Колея на обоих дорогах - стандартная российская, 1524 мм. Напряжение тоже стандартное, 50Гц и 25кВ.
     Скорости на равнинных участках, как правило, в районе 110 км/ч. В горах могут быть самые разные, вплоть до 30 км/ч.
   </p>
