--- a/tourismex/templates/user_account.html
+++ b/tourismex/templates/user_account.html
@@ -15,13 +15,13 @@
             <label class="block font-bold mb-2" for="username">
                 Имя пользователя
             </label>
-            <input class="rounded-md bg-color_base_gray py-2 px-3 w-3/4 leading-tight focus:outline-none focus:shadow-outline" id="username" type="text" value="All_C" placeholder="Ваше имя пользователя:">
+            <input class="rounded-md bg-color_base_gray py-2 px-3 w-3/4 leading-tight focus:outline-none focus:shadow-outline" id="username" type="text" value="{{user.nickname}}" placeholder="Ваше имя пользователя:">
         </div>
         <div class="mb-4">
             <label class="block font-bold mb-2" for="email">
                 Email
             </label>
-            <input class="rounded-md py-2 px-3 w-3/4 bg-color_base_gray leading-tight focus:outline-none focus:shadow-outline" id="email" type="email" value="example@gmail.com" placeholder="Введите адрес электронной почты">
+            <input class="rounded-md py-2 px-3 w-3/4 bg-color_base_gray leading-tight focus:outline-none focus:shadow-outline" id="email" type="email" value="{{user.email}}" placeholder="Введите адрес электронной почты">
         </div>
         <div class="mb-4">
             <label class="block font-bold mb-2" for="avatar">
@@ -42,7 +42,7 @@
             <label class="block font-bold mb-2" for="city">
                 Ваш город
             </label>
-            <input class="rounded-md py-2 px-3 w-3/4 bg-color_base_gray leading-tight focus:outline-none focus:shadow-outline" id="city" type="text" value="Иркутск" placeholder="Ваш текущий город:">
+            <input class="rounded-md py-2 px-3 w-3/4 bg-color_base_gray leading-tight focus:outline-none focus:shadow-outline" id="city" type="text" value="{{user.city if user.city != None}}" placeholder="Ваш текущий город:">
         </div>
         <div class="mb-4">
             <label class="block font-bold mb-2" for="about">
@@ -54,9 +54,9 @@
             <button id="save_user_settings" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" type="button">
                 Сохранить
             </button>
-            <button id="logout" class="bg-gray-700 hover:bg-color_base_gray text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" type="button">
+            <a href="{{ url_for('logout') }}" id="logout" class="bg-gray-700 hover:bg-color_base_gray text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" type="button">
                 Выйти
-            </button>
+            </a>
 
         </div>
     </form>
